; ModuleID = '/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/net/ethernet/mcs8140/extr_nuport_mac.c_nuport_mac_mii_read.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/net/ethernet/mcs8140/extr_nuport_mac.c_nuport_mac_mii_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mii_bus = type { %struct.net_device* }
%struct.net_device = type { i32 }
%struct.nuport_mac_priv = type { i32 }

@MII_ADDR_SHIFT = common dso_local global i32 0, align 4
@MII_REG_SHIFT = common dso_local global i32 0, align 4
@MII_BUSY = common dso_local global i32 0, align 4
@MII_ADDR_REG = common dso_local global i32 0, align 4
@MII_DATA_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mii_bus*, i32, i32)* @nuport_mac_mii_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nuport_mac_mii_read(%struct.mii_bus* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mii_bus*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.net_device*, align 8
  %9 = alloca %struct.nuport_mac_priv*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.mii_bus* %0, %struct.mii_bus** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %12 = load %struct.mii_bus*, %struct.mii_bus** %5, align 8
  %13 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %12, i32 0, i32 0
  %14 = load %struct.net_device*, %struct.net_device** %13, align 8
  store %struct.net_device* %14, %struct.net_device** %8, align 8
  %15 = load %struct.net_device*, %struct.net_device** %8, align 8
  %16 = call %struct.nuport_mac_priv* @netdev_priv(%struct.net_device* %15)
  store %struct.nuport_mac_priv* %16, %struct.nuport_mac_priv** %9, align 8
  store i32 0, i32* %11, align 4
  %17 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %9, align 8
  %18 = call i32 @nuport_mac_mii_busy_wait(%struct.nuport_mac_priv* %17)
  store i32 %18, i32* %10, align 4
  %19 = load i32, i32* %10, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %3
  %22 = load i32, i32* %10, align 4
  store i32 %22, i32* %4, align 4
  br label %47

23:                                               ; preds = %3
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* @MII_ADDR_SHIFT, align 4
  %26 = shl i32 %24, %25
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* @MII_REG_SHIFT, align 4
  %29 = shl i32 %27, %28
  %30 = or i32 %26, %29
  %31 = load i32, i32* @MII_BUSY, align 4
  %32 = or i32 %30, %31
  %33 = load i32, i32* %11, align 4
  %34 = or i32 %33, %32
  store i32 %34, i32* %11, align 4
  %35 = load i32, i32* %11, align 4
  %36 = load i32, i32* @MII_ADDR_REG, align 4
  %37 = call i32 @nuport_mac_writel(i32 %35, i32 %36)
  %38 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %9, align 8
  %39 = call i32 @nuport_mac_mii_busy_wait(%struct.nuport_mac_priv* %38)
  store i32 %39, i32* %10, align 4
  %40 = load i32, i32* %10, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %44

42:                                               ; preds = %23
  %43 = load i32, i32* %10, align 4
  store i32 %43, i32* %4, align 4
  br label %47

44:                                               ; preds = %23
  %45 = load i32, i32* @MII_DATA_REG, align 4
  %46 = call i32 @nuport_mac_readl(i32 %45)
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %44, %42, %21
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local %struct.nuport_mac_priv* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @nuport_mac_mii_busy_wait(%struct.nuport_mac_priv*) #1

declare dso_local i32 @nuport_mac_writel(i32, i32) #1

declare dso_local i32 @nuport_mac_readl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
